--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .headerpart{
 	text-align: center;
 	display: flex;
-	background-color: #D9EEE1;
+	background-color: #076b56;
 	gap: 30px;
 	justify-content: center;
 	place-items: center;
@@ -14,7 +14,7 @@
 	color: black;
 }
 .bg1{
-		background-color: #D9EEE1;
+		background-color: #076b56;
 }
 img{
 	width: 50px;
@@ -22,7 +22,7 @@ img{
 }
 h1{
 	font-size: 50px;
-	color: white;
+	color: rgb(255, 255, 255);
 }
 .description1{
     font-size: 20px;
@@ -34,7 +34,7 @@ h1{
 }
 ul{
 	list-style-type: none;
-	background-color:#D9EEE1;
+	background-color:#076b56;
 	display: flex;
 	margin: 0;
 	padding-bottom:30px;
@@ -57,20 +57,20 @@ border-start-start-radius: 50%;
 }
 
 .bg9{
-	background-image: url(images/dev3.jpg);
+	
 	background-size: cover;
 	
 }
 	
 .head2{
-	color: white;
+	color:#076b56;
 	font-size: 40px;
 	font-family: 'Source Sans Pro', sans-serif;
 	padding-top: 20px;
 }
 
 .p2{
-    color: #D9EEE1;
+    color: #076b56;
     font-size:25px;
     font-family:'Source Sans Pro', sans-serif;
 }
@@ -82,15 +82,17 @@ border-start-start-radius: 50%;
 	height:45px;
 	font-size: 25px;
 	font-family:'Source Sans Pro', sans-serif;
+	border: 1px solid black;
 
 }
 ::placeholder{
-          color: #3B9C9C;
+          color:#076b56;
 }
 
 .searchbox{
 	justify-content: center;
 	padding: 10px;
+	
 
 }
 
@@ -100,13 +102,43 @@ border-start-start-radius: 50%;
 	width: 50px;
 cursor: pointer;
 font-family:'Source Sans Pro', sans-serif;
-background:#D9EEE1;
-color: #3B9C9C;
+background:#076b56;
+color: #ffff;
 border: 1px solid black;
 }
 .link{
-	color: #D9EEE1;
+	color: #076b56;
     font-size:25px;
     font-family:'Source Sans Pro', sans-serif;
     padding: 30px;
 }
+ .tab{
+	font-size: 25px;
+	text-decoration: none;
+	color:black;
+	text-align: center ;
+	margin: 50px;
+	padding:90px;
+	border-radius: 5px;
+	font-family:'Source Sans Pro', sans-serif;
+	background-color:#076b56;
+
+
+}
+.tab:hover{
+	color: floralwhite;
+}
+
+
+ 
+ .tutorialbody{
+	background-color: #000;
+ }
+
+ .tabd{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
+	align-items: center;
+	
+ }
