--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ li a{
 
 }
 li a:hover{
-	color:black;
+	color:#076b56;
 background-color: white;
 border-end-end-radius: 50%;
 border-start-start-radius: 50%;
@@ -115,7 +115,7 @@ border: 1px solid black;
  .tab{
 	font-size: 25px;
 	text-decoration: none;
-	color:black;
+	color:#ffff;
 	text-align: center ;
 	margin: 50px;
 	padding:90px;
@@ -126,14 +126,12 @@ border: 1px solid black;
 
 }
 .tab:hover{
-	color: floralwhite;
+	background-color:#ffff;
+	color: #076b56;
+	border: 2px solid #076b56;
 }
 
 
- 
- .tutorialbody{
-	background-color: #000;
- }
 
  .tabd{
 	display: grid;
@@ -145,3 +143,37 @@ border: 1px solid black;
 .tcolor7{
 	padding:75px;
 }
+
+.tutorialhead{
+	text-align: center;
+	justify-content: center;
+	place-items: center;
+	display: flex;
+	gap: 30px;
+    padding-bottom:0;
+}
+
+
+.tutorialbg{
+	background-color: #076b56;
+
+}
+
+.ult{
+	list-style-type: none;
+	background-color:#076b56;
+	display: flex;
+	margin: 0;
+	padding-bottom:30px;
+	padding-top:40px;
+	justify-content: center;
+}
+.hrt{
+	width: 50%;
+	padding: 0;
+	margin: 0;
+}
+
+
+  
+  
