--- a/styles.css
+++ b/styles.css
@@ -186,9 +186,12 @@ border-radius: 15px;
 	display: flex;
 }
 .bga{
-	height: 300px;
+	height: 250px;
 	width: 300px;
 	margin: 50px;
+	border: 1px solid white;
+	padding: 20px;
+
 }
 .h1a{
 	font-family:'Source Sans Pro', sans-serif;
@@ -196,19 +199,29 @@ border-radius: 15px;
 	padding-top: 50px;
 	padding-bottom: 0;
 	margin-bottom:15px;
+	color: #ffff;
 }
 .hra{
-	width: 30%;
+	width: 40%;
 	color: #ffff;
 	float: left;
+	
 }
 .pa{
 	color: #ffff;
 	font-family:'Source Sans Pro', sans-serif;
 	font-size:18px;
 }
-@media screen and (max-width:300px){
-	li a{
-		font-size: 10px;
-	}
+.icona{
+	display: flex;
+	gap: 30px;
+	align-items: baseline;
+}
+.fbicon{
+	width: 33px;
+	height: 33px;
+}
+.instaicon{
+	height: 35px;
+	width: 35px;
 }
