--- a/styles.css
+++ b/styles.css
@@ -114,47 +114,20 @@ border-radius: 15px;
     font-family:'Source Sans Pro', sans-serif;
     padding: 30px;
 }
- .tab{
-	font-size: 25px;
-	text-decoration: none;
-	color:#ffff;
-	text-align: center ;
-	margin: 50px;
-	padding:90px;
-	border-radius: 5px;
-	font-family:'Source Sans Pro', sans-serif;
-	background-color:#076b56;
-
-
-}
-.tab:hover{
-	background-color:#ffff;
-	color: #076b56;
-	border: 2px solid #076b56;
-}
-
-
-
- .tabd{
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	justify-content: center;
-	align-items: center;
-	}
-
-.tcolor7{
-	padding:75px;
-}
-
 .tutorialhead{
-	text-align: center;
-	justify-content: center;
-	place-items: center;
+	align-items: center;
 	display: flex;
-	gap: 30px;
-    padding-bottom:0;
+	gap: 5px;
+    padding-left:10px;
+	padding-top: 0px;
+    margin:0%;
 }
-
+.h1t
+{
+	font-size: 40px;
+    padding: 0%;
+	margin:5px;
+}
 
 .tutorialbg{
 	background-color: #076b56;
@@ -163,18 +136,37 @@ border-radius: 15px;
 
 .ult{
 	list-style-type: none;
-	background-color:#076b56;
 	display: flex;
-	margin: 0;
-	padding-bottom:30px;
-	padding-top:40px;
-	justify-content: center;
+    float: right;
+	padding-left: 430px;
 }
-.hrt{
-	width: 50%;
-	padding: 0;
-	margin: 0;
+.lit{
+	color: #ffff;
+   padding-left: 25px;
+   padding-right: 25px;
+	text-decoration: none;
+	font-size: 20px;
 }
+.ult .lit:hover{
+	border-radius: 1px;
+}
+.tutorialbody{
+	background-color: #076b56;
+	width: 18%;
+	height: 1000px;
+}
+.tab{
+	color: #ffff;
+	text-decoration: none;
+	font-size: 20px;
+	margin-left: 10px;
+	line-height: 1.8em;
+	display: block;
+}
+.tutorialbody .tab:hover{
+	background-color: #198b75;
+}
+
 .aboutuspage{
 	background-color: #076b56;
 	gap: 20px;
@@ -260,6 +252,8 @@ border-radius: 15px;
 .h2a{
 	font-size: 45px;
 	color: #076b56;
+    padding: 0%;
+	margin-bottom: 18px;
 }
 .hra1{
 	color:#000;
@@ -271,14 +265,21 @@ border-radius: 15px;
 	list-style-type: none;
 	justify-content: center;
 	display: flex;
+	padding-top: 10px;
+	margin-top:4px;
 }
 .liaa{
+	text-decoration: none;
+	color: #076b56;
+	font-size:18px ;
+	padding-right: 33px;
+	padding-left: 33px;
 
 }
 
 .ula .liaa:hover{
-	color:#076b56;
-background-color: white;
-border-end-end-radius: 50%;
-border-start-start-radius: 50%;
+	color:#ffff;
+   background-color:#076b56;
+   border-radius: 1px;
+
 }
