--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,13 @@
 
 	text-decoration: none;
 	color: #ffff;
-	font-size: 22px;
+	font-size: 20px;
 	
 }
 .fas{
 	color: #ffff;
-	width: 25px;
-	height: 25px;
+	width: 23px;
+	height: 23px;
 }
 .login:hover{
 	background-color: #ffff;
@@ -181,14 +181,15 @@ border-radius: 15px;
 .tutorialbody{
 	background-color: #076b56;
 	width: 18%;
-	height: 1000px;
+	height: 570px;
+	position:fixed;
 }
 .tab{
 	color: #ffff;
 	text-decoration: none;
 	font-size: 20px;
 	margin-left: 10px;
-	line-height: 1.8em;
+	line-height: 2.1em;
 	display: block;
 }
 .tutorialbody .tab:hover{
@@ -340,4 +341,5 @@ border-radius: 15px;
   .close:hover {
 	color: #000;
   }
+
   
