--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ border-start-start-radius: 50%;
     font-family:'Source Sans Pro', sans-serif;
 }
 .space{
-	line-height: 0.2;
+	line-height: 0.2em;
 }
 .sbox{
 	width: 450px;
@@ -161,8 +161,7 @@ border-radius: 15px;
 
 .tutorialbg{
 	background-color: #076b56;
-	
-
+	position:fixed;
 }
 
 .ult{
@@ -187,6 +186,7 @@ border-radius: 15px;
 	width: 18%;
 	height: 570px;
 	position:fixed;
+	margin-top: 57px;
 }
 .tab{
 	color: #ffff;
@@ -450,7 +450,28 @@ button:focus {
 	font-family: 'Roboto', sans-serif;	
 	font-size: 13px;
 }
-.h2i{
+.iframei{
+       margin-left: 245px;
+	   margin-top: 37px;
+	   margin-bottom: 0%;
+}
+.h1i{
 	color: #000;
+	font-size: 40px;
+}
+.pi{
+	font-size: 20px;
+	line-height: 1.2em;
 }
 
+.h1d{
+	color: #000;
+	font-size: 30px;
+}
+.pd{
+	font-size: 20px;
+}
+.lid{
+	font-size: 20px;
+	line-height: 2em;
+}
