--- a/styles.css
+++ b/styles.css
@@ -457,11 +457,12 @@ button:focus {
 }
 .h1i{
 	color: #000;
-	font-size: 40px;
+	font-size: 35px;
 }
 .pi{
 	font-size: 20px;
 	line-height: 1.2em;
+	margin: 20px;
 }
 
 .h1d{
